unpackaged/main/default/objects/Partner_Review__c/Partner_Review__c.object-meta.xml
<CustomObject>
    <label>Partner Review</label>
    <nameField>
        <displayFormat>Partner Review - {0000}</displayFormat>
        <label>Partner Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>