unpackaged/main/default/objects/Partner_Review__c/fields/Approved_Customer_Review__c.field-meta.xml
<CustomField>
    <fullName>Approved_Customer_Review__c</fullName>
    <label>Approved Customer Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>