unpackaged/main/default/objects/Partner_Review__c/fields/OS_Accounts_ID__c.field-meta.xml
<CustomField>
    <fullName>OS_Accounts_ID__c</fullName>
    <label>xOS Accounts ID DEP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>