unpackaged/main/default/objects/Partner_Review__c/fields/OS_Accounts_UUID__c.field-meta.xml
<CustomField>
    <fullName>OS_Accounts_UUID__c</fullName>
    <externalId>true</externalId>
    <label>OS Accounts UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>