unpackaged/main/default/objects/Partner_Review__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Reviews</relationshipLabel>
    <relationshipName>Partner_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>