unpackaged/main/default/objects/Partner_Review__c/fields/Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email__c</fullName>
    <label>Partner Email</label>
    <type>Email</type>
</CustomField>