unpackaged/main/default/objects/Partner_Review__c/fields/Partner_Object__c.field-meta.xml
<CustomField>
    <fullName>Partner_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Object</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Partner Reviews</relationshipLabel>
    <relationshipName>Partner_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>