unpackaged/main/default/objects/Partner_Review__c/fields/Partner_Response__c.field-meta.xml
<CustomField>
    <fullName>Partner_Response__c</fullName>
    <label>Partner Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>