unpackaged/main/default/objects/Partner_Review__c/fields/Partner_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Response_Date__c</fullName>
    <label>Partner Response Date</label>
    <type>Date</type>
</CustomField>