unpackaged/main/default/objects/Partner_Review__c/fields/Pending_Customer_Review__c.field-meta.xml
<CustomField>
    <fullName>Pending_Customer_Review__c</fullName>
    <label>Pending Customer Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>