unpackaged/main/default/objects/Partner_Review__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content violates review standards</fullName>
            </value>
            <value>
                <fullName>Content contains personally identifiable information</fullName>
            </value>
            <value>
                <fullName>Content contains inappropriate language</fullName>
            </value>
            <value>
                <fullName>Review is not based on personal experience</fullName>
            </value>
            <value>
                <fullName>Content is not relevant to the product at hand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>